# automata

./: .build.yml  .env  .gitignore  .travis.yml  CNAME  Cargo.toml  Dockerfile  Makefile.toml  README.md  automata.toml  cli.md  developement.md  font.md  head.md  notes.md  prerequisites.md  roadmap.md  tocuv.toml  welcome.md  wpa_supplicant.conf  wqa.toml
.cargo/: config
assets/: wqm.service
gearpump/: CNAME  COPYING  Cargo.toml  README.md  apitest.http
gearpump/src/: main.rs
snap/: snapcraft.yaml
src/: asset.rs  calibration.rs  channel.rs  config.rs  dbus.rs  device.rs  emoji.rs  error.rs  hello.rs  hid.rs  indicators.rs  lib.rs  local.rs  logger.rs  machine.rs  main.rs  measurement.rs  monitor.rs  node.rs  paths.rs  repo.rs  rules.rs  schema.rs  sensor.rs  sentry.rs  server.rs  state.rs  staticfile.rs  store.rs  stream.rs  templates.rs  welcom.rs  workspace.rs
src/analysis/: adjustment.rs  calibration.rs  channel.rs  indicator.rs  measurement.rs  mod.rs  uvtc.rs
src/analysis/old-measurement/: integration.rs  measurement copy.rs  method.rs  signal.rs  solution.rs
src/analysis/settings/src/: uv.rs
src/analysis/settings/src/data/: device.rs  uv.rs
src/analyzer/: analyzer.rs  calibration.rs  channel.rs  device.rs  indicator.rs  local.rs  measurement.rs  mod.rs  statistic.rs  status.rs  stream.rs  uv.rs
src/analyzer/control/: lamp.rs  mod.rs  pumps.rs  timers.rs  valve.rs
src/analyzer/indicators/: bod.rs  cod.rs  doc.rs  ec.rs  mod.rs  no.rs  npoc.rs  poc.rs  tc.rs  tic.rs  toc.rs  voc.rs
src/analyzer/monitoring/: airflow.rs  humidity.rs  mod.rs  pressure.rs
src/analyzer/rules/: mod.rs  rules.rs
src/analyzer/sensors/: mod.rs  ndir.rs  temperatur.rs
src/api/: app.rs  can.rs  client.rs  flow.rs  measure.rs  mod.rs  routes.rs  sensor.rs  settings.rs  templates.rs  test_server.rs  uv.rs
src/assets/: log.yml  manifest.toml  welcome.md
src/assets/tmp/: tasks.toml
src/async/: fs.rs
src/backup/: mod.rs
src/cli/: mod.rs  progressbar.rs  run.rs  verify.rs
src/client/: mod.rs  sensor.rs  server.rs
src/common/: systime.rs
src/data/: cpu.rs  host.rs  memory.rs  mod.rs  sensor.rs
src/dbus/: flow.rs  mod.rs  sensor.rs  uv.rs
src/dbus/control/: relays.rs  valve.rs  xysystem.rs
src/github/: fetcher.rs  gist.rs  input.rs  issue_or_pr.rs  issues_with_label.rs  latest_tag.rs  mod-temp.rs  mod.rs  output.rs  posts.rs
src/gpio/: mod.rs  nodered.rs
src/graphql/: graphql.rs  mod.rs  schema.graphql
src/graphql/query/: issue_or_pr.graphql  issues_with_label.graphql  latest_tag.graphql
src/hardware/: airflow.rs  humidity.rs  lamp.rs  mod.rs  pressure.rs  pump.rs  relays.rs
src/measure/: adjustment.rs  calibration.rs  channel.rs  indicator.rs  integration.rs  lib.rs  measurement.rs  mod.rs  rule.rs  solution.rs  store.rs  stream.rs
src/measure/indicators/: indicator.rs  mod.rs  tc.rs  tic.rs  toc.rs
src/measure/old-measurement/: calibration.rs  channel.rs  mod.rs  rule.rs  statistic.rs
src/measure/settings/: Cargo.toml
src/measure/settings/src/: sensors.rs
src/measure/settings/src/data/: mod.rs  ultra.rs
src/metric/: cpu.rs  disk.rs  gpio.rs  host.rs  memory.rs  mod.rs
src/metrics/: mod.rs
src/metrics/data/: disk.rs  memory.rs
src/mio/: airflow.rs  api.rs  config.rs  dbus.rs  edinburg.rs  edinburgh.rs  flow.rs  gpio.rs  humidity.rs  lamp.rs  mio.rs  mod.rs  ndir.rs  pressure.rs  pump.rs  sensor.rs  session.rs  signal.rs  uart.rs  uv.rs  valve.rs
src/mio/control/: mod.rs  pumps.rs  remote.rs
src/mio/dbus/async-std/examples/: udp-echo.rs
src/mio/sensor/: aide.rs  airflow.rs  edinburgh.rs  humidity.rs  integration.rs  mod.rs  pressure.rs  sensor.rs  simulation.rs  temperatur.rs
src/rules/: mod.rs  statistic.rs
src/sensor/: airflow.rs  edinburgfs.rs  edinburgh.rs  flow.rs  humidity.rs  integration.rs  massflow.rs  mod.rs  ndir.rs  signal.rs  simulation.rs
src/server/: app.rs  local.rs  mod.rs  monitor.rs  stream.rs
src/server/templates/: tera.rs
src/settings/: Cargo.toml
src/settings/src/: autosampler.rs  store.rs  uvtc-conf.rs  xysystem.rs
src/settings/src/settings/: mod.rs  storage.rs
src/store/: adjustment.rs  airflow.rs  calibration.rs  channel.rs  device.rs  error.rs  hid.rs  humidity.rs  indicator.rs  integration.rs  lamp.rs  machine_id.rs  measurement.rs  mod.rs  ndir.rs  pressure.rs  pump.rs  ron copy.rs  rule.rs  sensor.rs  signal.rs  status.rs  stream.rs  toml copy.rs  uv.rs
src/stream/: mod.rs
src/templates/: mod.rs  tera.rs
src/tests/: api.rs
tmp/: automata.toml
