[package]
name = "automata"
version = "0.1.0"
authors = ["smolkov <asmolkov@lar.com>"]
edition = "2018"
description = "Water quality analyzer backend"
keywords = ["api", "autom", "information"]
categories = ["asynchronous", "os"]
repository = "https://github.com/smolkov/automata"
readme = "README.md"
license = "Apache-2.0 OR MIT"



# publish = false

# Serializer
# serde = {version = "1.0.92", features = ["derive"]}
# serde_derive = "1.0.92"
# ron = "0.5.1"



[badges]
maintenance = { status = "experimental"}

[dependencies]
failure = "0.1.5"
# cli
paw = "1.0.0"
structopt = { version = "0.2.18", features = ["paw"] }

# Terminal
indicatif = "0.11.0"
termcolor = "1.0.5"
yansi = "0.5.0"
#Time date
chrono = "0.4.7"
# Log
log = "0.4.6"
log4rs = "0.8.3"
slog = "2.4.1"
sloggers = "0.3.2"
# config
config = "0.9.3"
# Serializer
semver = "0.9.0"
serde_json = "1.0.39"
serde = { version = "1.0.93", features = ["derive"] }
serde_derive = "1.0.93"
serde_yaml = "0.8.9"
# File system
fs2 = "0.4.3"
bytes = "0.4.12"
# toml = "0.5.1"
wqa={path="../wqa/wqa"}

bincode = "1.1.4"
lazy_static = "1.3.0"
# wqa = {path="../"}
# socketcan = "1.7.0"
# dbus = "0.6.4"
# Async
# heapless = "0.4.4"
graphql_client = "0.8.0"
juniper = "0.12.0"
# diesel = { version = "1.4.2", default-features = false, features = ["r2d2", "sqlite"] }
# diesel_derives = "1.4.0"
# diesel_migrations = { version = "1.4.0", default-features = false, features = ["sqlite"] }
matches = "0.1.8"
dtoa = "0.4.4"
itoa = "0.4.4"
tera = "1.0.0-beta.10"
reqwest = "0.9.18"
serde_with = "1.3.1"
http = "0.1.17"
regex = "1.1.7"

# rocket = "0.4.2"
# Async runtime
futures-preview = { version = "0.3.0-alpha.16", features = ["async-await", "nightly"] }
runtime = "0.3.0-alpha.6"
tide = "0.2.0"


plotters = "0.2.2"
confy = "0.3.1"
atty = "0.2.11"
crossbeam-channel = "0.3.8"
os_pipe = "0.8.1"
prometheus = "0.7.0"
sentry = "0.15.5"
console = "0.7.7"
url = "1.7.2"
toml = "0.5.1"
ctrlc = "3.1.3"
procfs = "0.5.3"
scopeguard = "1.0.0"
convey = "0.2.0"
ferris-says = "0.1.1"



# systemd-crontab-generator = "1.0.2"

# runtime = "0.0.0"

# paw = "1.0.0"

# WQMS package
# wqa = {path="../wqa"}
# API sync


# [dev-dependencies]
# mockers = "0.20"
# mockers_derive = "0.20"
# env_logger = { version = "0.6", default-features = false }
