[package]
name = "wqa"
version = "0.0.4"
authors = ["smolkov <asmolkov@lar.com>"]
edition = "2018"
description = "Water quality analyzer backend"
keywords = ["api", "monitor", "server"]
categories = ["", "os"]
repository = "https://github.com/lar-ag/wqa"
readme = "README.md"
license = "Apache-2.0 OR MIT"
# Is it maintained resolution time: `repository` is required.
is-it-maintained-issue-resolution = { repository = "https://todo.sr.ht/~asmolkov/quicktocuv" }
# Is it maintained percentage of open issues: `repository` is required.
is-it-maintained-open-issues = { repository = "https://todo.sr.ht/~asmolkov/quicktocuv" }



[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lar-rs/wqa", branch = "master"}

[dependencies]
# errors
failure = "0.1.5"
# cli
ferris-says = "0.1.1"
ci_info = "0.7.1"
paw = "1.0.0"
structopt = { version = "0.2.18", features = ["paw"] }
convey = "0.2.0"
# Terminal
console = "0.7.7"
indicatif = "0.11.0"
termcolor = "1.0.5"
yansi = "0.5.0"
atty = "0.2.13"
#Time date
chrono = "0.4.7"
# Log
log = "0.4.7"
log4rs = "0.8.3"
slog = "2.5.0"
sloggers = "0.3.2"
# config
config = "0.9.3"
confy = "0.3.1"
# Version
semver = "0.9.0"
# Serializer
serde_json = "1.0.40"
serde = { version = "1.0.97", features = ["derive"] }
serde_derive = "1.0.97"
serde_yaml = "0.8.9"
bincode = "1.1.4"
toml = "0.5.1"
ron = "0.5.1"
# File system
fs2 = "0.4.3"
dirs = "2.0.1"
bytes = "0.4.12"
directories = "2.0.1"
walkdir = "2.2.9"
# git
git2 = "0.9.1"
# wqa={path="../wqa/wqa"}
# wqm-can ={ git="https://github.com/lar-ag/wqm-can.git"}
lazy_static = "1.3.0"

# publish = false

# Serializer
# serde = {version = "1.0.92", features = ["derive"]}
# serde_derive = "1.0.92"
# ron = "0.5.1"


# wqa-settings = { git = "https://git.sr.ht/~asmolkov/wqa-settings",branch = "master" }
wqa-settings = { path = "../wqa-settings"}
# socketcan = "1.7.0"
# dbus = "0.6.4"
# Async
# heapless = "0.4.4"
graphql_client = "0.8.0"
juniper = "0.13.0"
diesel = { version = "1.4.2", default-features = false, features = ["r2d2", "sqlite"] }
diesel_derives = "1.4.0"
# diesel_migrations = { version = "1.4.0", default-features = false, features = ["sqlite"] }
# matches = "0.1.8"
dtoa = "0.4.4"
itoa = "0.4.4"
# reqwest = "0.9.18"
# serde_with = "1.3.1"
mime = "0.3.13"
mime_guess = "2.0.0-alpha.6"
# regex = "1.1.9"
# futures-fs = "0.0.5"
# rocket = "0.4.2"
# Async runtime
# futures-preview = { version = "0.3.0-alpha.17", features = ["async-await", "nightly"] }
runtime = "0.3.0-alpha.6"
http = "0.1.17"
tide = {git = "https://github.com/rustasync/tide.git"}

# Metrics

# prometheus = "0.7.0"

# Templates
tera = "0.11.20"
once_cell = "0.2.4"
lain = "0.1.2"
ansi_term = "0.12.0"
tempfile = "3.1.0"
memdb = "1.0.0"
regex = "1.2.0"
compose = "0.1.0"
# plotters = "0.2.2"
# crossbeam-channel = "0.3.8"
# os_pipe = "0.8.1"
# sentry = "0.15.5"
# console = "0.7.7"
# url = "1.7.2"
# toml = "0.5.1"
# ctrlc = "3.1.3"
# procfs = "0.5.3"
# scopeguard = "1.0.0"
# futures-util = "0.2.1"
# dbus = "0.6.4"
# systemd-crontab-generator = "1.0.2"
# runtime = "0.0.0"
# paw = "1.0.0"
# WQMS package
# wqa = {path="../wqa"}
# API sync


# [dev-dependencies]
# mockers = "0.20"
# mockers_derive = "0.20"
# env_logger = { version = "0.6", default-features = false }


[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "master" }

